refactor: Refactor responses
