# spec/openapi.json
@@ -66,7 +66,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/BasicResponse"
+                  "$ref": "#/components/schemas/BasicVec"
                 }
               }
             }
@@ -138,7 +138,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/NftResponse"
+                  "$ref": "#/components/schemas/NftVec"
                 }
               }
             }
@@ -268,7 +268,7 @@
           }
         }
       },
-      "BasicResponse": {
+      "BasicVec": {
         "type": "array",
         "items": {
           "$ref": "#/components/schemas/BasicOutput"
@@ -344,7 +344,7 @@
           }
         }
       },
-      "NftResponse": {
+      "NftVec": {
         "type": "array",
         "items": {
           "$ref": "#/components/schemas/NftOutput"
