# src/rest/routes/v1/nft.rs
@@ -2,18 +2,15 @@
 // SPDX-License-Identifier: Apache-2.0
 
 use axum::{Extension, Router, extract::Query, routing::get};
-use serde::{Deserialize, Serialize};
 use tracing::error;
-use utoipa::ToSchema;
 
 use crate::{
-    impl_into_response,
     models::ObjectType,
     rest::{
         State,
         error::ApiError,
         extractors::Path,
-        routes::v1::{PaginationParams, fetch_stored_objects},
+        routes::v1::{PaginationParams, fetch_stored_objects, responses::*},
     },
 };
 
@@ -26,7 +23,7 @@ pub(crate) fn router() -> Router {
     get,
     path = "/v1/nft/{address}",
     responses(
-        (status = 200, description = "Successful request", body = NftResponse),
+        (status = 200, description = "Successful request", body = NftVec),
         (status = 400, description = "Bad request"),
         (status = 500, description = "Internal server error"),
         (status = 503, description = "Service unavailable"),
@@ -42,7 +39,7 @@ async fn nft(
     Path(address): Path<iota_types::base_types::IotaAddress>,
     Query(pagination): Query<PaginationParams>,
     Extension(state): Extension<State>,
-) -> Result<NftResponse, ApiError> {
+) -> Result<NftVec, ApiError> {
     let stored_objects = fetch_stored_objects(address, pagination, state, ObjectType::Nft)?;
 
     let nft_outputs: Vec<NftOutput> = stored_objects
@@ -57,77 +54,7 @@ async fn nft(
         })
         .collect::<Result<Vec<_>, _>>()?;
 
-    Ok(NftResponse(nft_outputs))
-}
-
-#[derive(Clone, Debug, Serialize, ToSchema)]
-struct NftResponse(Vec<NftOutput>);
-impl_into_response!(NftResponse);
-
-#[derive(Clone, Debug, Serialize, Deserialize, PartialEq, ToSchema)]
-struct NftOutput {
-    id: String,
-    balance: Balance,
-    native_tokens: Bag,
-    storage_deposit_return: Option<StorageDepositReturn>,
-    timelock: Option<Timelock>,
-    expiration: Option<Expiration>,
-}
-
-#[derive(Clone, Debug, Serialize, Deserialize, PartialEq, ToSchema)]
-struct Balance {
-    value: u64,
-}
-
-#[derive(Clone, Debug, Serialize, Deserialize, PartialEq, ToSchema)]
-struct Bag {
-    id: String,
-    size: u64,
-}
-
-#[derive(Clone, Debug, Serialize, Deserialize, PartialEq, ToSchema)]
-struct StorageDepositReturn {
-    return_address: String,
-    return_amount: u64,
-}
-
-#[derive(Clone, Debug, Serialize, Deserialize, PartialEq, ToSchema)]
-struct Timelock {
-    unix_time: u64,
-}
-
-#[derive(Clone, Debug, Serialize, Deserialize, PartialEq, ToSchema)]
-struct Expiration {
-    owner: String,
-    return_address: String,
-    unix_time: u64,
-}
-
-impl From<iota_types::stardust::output::nft::NftOutput> for NftOutput {
-    fn from(output: iota_types::stardust::output::nft::NftOutput) -> Self {
-        Self {
-            id: output.id.object_id().to_string(),
-            balance: Balance {
-                value: output.balance.value(),
-            },
-            native_tokens: Bag {
-                id: output.native_tokens.id.object_id().to_string(),
-                size: output.native_tokens.size,
-            },
-            storage_deposit_return: output.storage_deposit_return.map(|x| StorageDepositReturn {
-                return_address: x.return_address.to_string(),
-                return_amount: x.return_amount,
-            }),
-            timelock: output.timelock.map(|x| Timelock {
-                unix_time: x.unix_time as u64,
-            }),
-            expiration: output.expiration.map(|x| Expiration {
-                owner: x.owner.to_string(),
-                return_address: x.return_address.to_string(),
-                unix_time: x.unix_time as u64,
-            }),
-        }
-    }
+    Ok(NftVec(nft_outputs))
 }
 
 #[cfg(test)]
